# framework-cve

./: .gitignore  README.md  pyproject.toml
examples/: CVE-2021-44228.ttl
ontologies/: cve.ttl
schema/: CVE_JSON_2.0_spec.md  cve_ontology.ttl
src/cve_stones/: __init__.py  models.py
src/cve_stones/ingest/: __init__.py  merge.py  v5.py
src/cve_stones/ontology/: generator.py  serializer.py
src/framework_cve/: __init__.py
src/framework_cve/ingest/: __init__.py  v2.py
src/framework_cve/ontology/: generator.py  serializer.py
tests/: test_ingest.py  test_merge_and_serialize.py
