[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "framework-cve"
version = "0.1.0"
description = "Unified CVE ontology supporting JSON 2.x and 5.x ingestion"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/framework_cve"]
